@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Remove redundant hash brackets from generator template [cody]
+#
 # * Add additional options to the PayPal Website Payments Standard Helper [Rick Olson]
 #
 # * Move generate_unique_id method to Gateway class so other gateways can also use it [cody]
